--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,9 @@ services:
     ports:
       - '80:80'
   docker-api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - '8081:8081'
     container_name: docker-api
