--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=docker-db
 POSTGRES_URL=jdbc:postgresql://postgres:5432/docker-db
+POSTGRES_URL2=jdbc:postgresql://localhost:5432/docker-db
 
 PGADMIN_DEFAULT_EMAIL=lucas@gmail.com
 PGADMIN_DEFAULT_PASSWORD=password
