--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - .env
     ports:
       - '5432:5432'
+    networks:
+      - backend
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
@@ -16,6 +18,8 @@ services:
       - .env
     ports:
       - '80:80'
+    networks:
+      - backend
   docker-api:
     build:
       context: .
@@ -28,5 +32,10 @@ services:
     depends_on:
       - postgres
       - pgadmin
+    networks:
+      - backend
+networks:
+  backend:
+    driver: bridge
 
 
