--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,12 @@ services:
     container_name: postgres
     image: postgres
     restart: always
-    env_file:
-      - .env
+#    env_file:
+#      - .env
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: docker-db
     ports:
       - '5432:5432'
     networks:
@@ -14,8 +18,11 @@ services:
     container_name: pgadmin
     image: dpage/pgadmin4
     restart: always
-    env_file:
-      - .env
+#    env_file:
+#      - .env
+    environment:
+      PGADMIN_DEFAULT_EMAIL: lucas@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: password
     ports:
       - '80:80'
     networks:
