--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   postgres:
     container_name: postgres
     image: postgres
-    restart: always
+    restart: always #restart always container restart
 #    env_file:
 #      - .env
     environment:
@@ -11,7 +11,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: docker-db
     ports:
-      - '5432:5432'
+      - '5432:5432' #frist value is port in your computer
     networks:
       - backend
   pgadmin:
